--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -17,10 +17,10 @@ $color__background-ins: #fff9c0;
 
 /* header */
 $color__header:#fff;
-$color__header-bar: #08a5cb;
+$color__header-bar: #0379C5;
 $color__header-bar-text: #fff;
-$color__header-background: #06738E;
-$color__nav-button: #3598D9;
+$color__header-background: #fff;
+$color__nav-button: #0379C5 ;
 $color__nav-button-hover: #3598D9;
 $color__nav-button-focus: #3598D9;
 
