--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -2,7 +2,8 @@
 	width: 100%;
 }
 .sitewrapper {
-	max-width: 75em;
+	max-width: 69em;
+	min-width: 320px;
 	margin-left: auto;
 	margin-right: auto;			
 	padding: 0 1em;
