--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -50,8 +50,11 @@ ul.menu-left.collapse {
 
 }
 
+/*
 .hide-nav {
  transform: translateY(-120% !important); -webkit-transform: translateY(-120%) !important; }
+ */
+
 
 .nav-toggle {
 display: block;
