home hector, colors, images, video

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -111,6 +111,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 
 /*----------------- GLOWAY ----------------*/
+/*----------------- 
 @import "styles/tecnocreativo";
 @import "styles/page-1";
 @import "styles/gloway";
+----------------*/
+@import "styles/hector";
