--- a/sass/variables-site/_colors-azul.scss
+++ b/sass/variables-site/_colors-azul.scss
@@ -17,12 +17,12 @@ $color__background-ins: #fff9c0;
 
 /* header */
 $color__header:#fff;
-$color__header-bar: #30393a;
+$color__header-bar: #0379C5;
 $color__header-bar-text: #fff;
 $color__header-background: #fff;
-$color__nav-button: #7a7a7a ;
-$color__nav-button-hover: rgba(122,122,122,.7);
-$color__nav-button-focus: rgba(122,122,122,.7);
+$color__nav-button: #0379C5 ;
+$color__nav-button-hover: #3598D9;
+$color__nav-button-focus: #3598D9;
 
 /* text */
 $color__text-main: #404040;
@@ -47,9 +47,9 @@ $color__link-tag: #8dbfcb;
 $color__link-tag-hover: #06738E;
 
 /* links */
-$color__link: #b50937;
-$color__link-visited: #b50937;
-$color__link-hover: #e60b46;
+$color__link: #08a5cb;
+$color__link-visited: #08a5cb;
+$color__link-hover: #06738E;
 $color__link-text: royalblue;
 $color__link-text-visited: purple;
 $color__link-text-hover: midnightblue;
